chore: create user skill seeding

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
 ENV=
+TYPEORM_SEEDING_FACTORIES=dist/**/database/factories/**/*.js
+TYPEORM_SEEDING_SEEDS=dist/**/database/seeds/**/*.js
